correction css rotation mobile

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -113,6 +113,7 @@ label{
 @media (max-width: 700px){
     .contact-menu{
         width: 70%;
+        /* height: 50%; */
     }
     form{
         width: 100%;
@@ -141,5 +142,49 @@ label{
     .orMessageMe{
         text-align: center;
         font-size: 1rem;
+    }
+    .submit{
+        margin-top: -8%;
+    }
+}
+
+@media screen and (orientation: landscape) {
+    .contact-menu{
+        width: 90%;
+        height: 90% !important;
+    }
+    form{
+        width: 100%;
+    }
+    input, #message{
+        width: 92%;
+    }
+    .success-message p{
+        padding: 0 0.5rem;
+    }
+    .buttonCv a{
+        display: none;
+        margin-top: 80% !important;
+        margin-left: -10%;
+        font-size: 1rem !important;
+        border-radius: 20px;
+        width: 30%;
+        height: auto;
+        padding: 3%;
+        margin-bottom: 0%;
+        text-decoration: none; 
+        color: white;
+        text-align: center;
+    }
+    .buttonCv:hover a{
+        padding: 4%;
+    }
+    .orMessageMe{
+        display: none;
+        text-align: center;
+        font-size: 1rem;
+    }
+    .submit{
+        margin-top: -8%;
     }
 }
