--- a/src/styles/projectsMenu.css
+++ b/src/styles/projectsMenu.css
@@ -108,24 +108,27 @@
 
 @media (max-width: 700px){
     .project-menu{
-        width: 28rem;
+        width: 90%;
         flex-direction: column;
         align-items: center;
         left: 50%;
         top: 15%;
     }
     .project-item.activeProject .title{
-        font-size: 1rem;
+        width: 100%;
+        font-size: 0.9rem;
+        text-align: center;
     }
     .title{
         font-size: 0.8rem;
+        text-align: center;
     }
     .project-menu p{
         font-size: 1rem   ;
     }
     .project-sub-container{
         margin-top: 0.3rem;
-        width: 20rem;
+        width: 100%;
         font-size: 1.2rem;
         background: linear-gradient(90deg, rgba(0,0,0,0.25), rgba(255, 255, 255, 0)) !important;
         border-radius: 20px;
@@ -133,9 +136,10 @@
     }
     .project-sub-container h3{
         font-size: 1.1rem;
+        text-align: center;
     }
     .project-sub-container img{
-        width: 17rem;
+        width: 100%;
     }
     .link-container a{
         margin-top: 0.5rem;
@@ -143,13 +147,16 @@
         height: 2rem;
     }
     .project-items-container{
-        margin-top: 0;
-        left: 20%;
+        margin-top: 1%;
+        margin-bottom: 5%;
+        width: 100%;
+        left: 0%;
         padding-bottom: 0%;
+        flex-direction: row;
     }
     .project-item{
         height: 3rem;
-        width: 70%;
+        width: 100%;
         display: flex;
         position: relative;
         justify-content: flex-end;
@@ -157,6 +164,12 @@
         cursor: pointer;
     }
     .project-item.activeProject{
-        width: 75%;
+        width: 100%;
+    }
+    
+    .activeProject{
+        border-radius: 20px;
+        cursor: default;
+        padding-left: 2%;
     }
 }
